test/corpus/array_tables.txt
===================
Array of Tables
===================

[[products]]
name = "Hammer"
sku = 738594937

[[products]]  # Empty table

[[products]]
name = "Nail"
sku = 284758393
color = "gray"

---

(source_file
  (array_of_tables
    name: (key (bare_key)))
  (key_value
    key: (key
      (bare_key))
    value: (string))
  (key_value
    key: (key
      (bare_key))
    value: (integer))
  (array_of_tables
    name: (key (bare_key)))
  (comment)
  (array_of_tables
    name: (key (bare_key)))
  (key_value
    key: (key
      (bare_key))
    value: (string))
  (key_value
    key: (key
      (bare_key))
    value: (integer))
  (key_value
    key: (key
      (bare_key))
    value: (string))) 
