test/corpus/table_headers.txt
===================
Whitespace in Table Headers
===================

[a.b.c]            # this is best practice
[ d.e.f ]          # same as [d.e.f]
[ g . h . i ]      # same as [g.h.i]
[ j . "ʞ" . 'l' ]  # same as [j."ʞ".'l']

---

(source_file
  (table
    name: (key (dotted_key
      table_key: (key (dotted_key
        table_key: (key (bare_key))
        member_key: (bare_key)))
      member_key: (bare_key))))
  (comment)
  (table
    name: (key (dotted_key
      table_key: (key (dotted_key
        table_key: (key (bare_key))
        member_key: (bare_key)))
      member_key: (bare_key))))
  (comment)
  (table
    name: (key (dotted_key
      table_key: (key (dotted_key
        table_key: (key (bare_key))
        member_key: (bare_key)))
      member_key: (bare_key))))
  (comment)
  (table
    name: (key (dotted_key
      table_key: (key (dotted_key
        table_key: (key (bare_key))
        member_key: (quoted_key (string))))
      member_key: (quoted_key (string)))))
  (comment)) 